site/themes/pyconth/assets/css/custom.css
/* ... */
/* 2    * - 09:10 - `Attack of Pythons: Gotchas and Landmines in Python`_ */

/* 3    * - 09:40 - :break:`Fish Slapping Dance / Break` */

body[class*="schedule"] table.table.day2 tr:nth-of-type(4) {
  background-color: rgba(181, 160, 172, 0.2);
}

/* 4    * - 09:50 - `Introduction to serverless Python with AWS Lambda`_ :beginner:`Beginner` */

/* 5    * - 10:25 - `Building a sustainable codebases with Type Annotations`_ :intermediate:`Intermediate` */

/* 6    * - 11:10 - :break:`Exploding Penguins on TV Set / Break` */

body[class*="schedule"] table.table.day2 tr:nth-of-type(6) {
  background-color: rgba(181, 160, 172, 0.2);
}

/* 7    * - 11:20 - `Playing with Social Network, Geo-Spatial, Financial Flow, and Banking System Data: Graph-Theoretic Computation in Python`_ */

body[class*="schedule"] table.table.day2 tr:nth-of-type(7) td:nth-of-type(3) {
  background-color: rgba(181, 160, 272, 0.2);
}

/* 8    * - 12:05 - :break:`Lumberjack Song / Break` */

body[class*="schedule"] table.table.day2 tr:nth-of-type(8) th {
  background-color: rgba(181, 160, 172, 0.2);
}

body[class*="schedule"] table.table.day2 tr:nth-of-type(8) td:nth-of-type(1) {
  background-color: rgba(181, 160, 172, 0.2);
}

body[class*="schedule"] table.table.day2 tr:nth-of-type(8) td:nth-of-type(2) {
  background-color: rgba(181, 160, 172, 0.2);
}

body[class*="schedule"] table.table.day2 tr:nth-of-type(8) td:nth-of-type(3) {
  background-color: rgba(181, 160, 272, 0.2);
}

/* 9    * - 12:15 - `Aaaarrgghh, Spider! Web scraping with Scrapy`_ :intermediate:`Intermediate` */

body[class*="schedule"] table.table.day2 tr:nth-of-type(9) td:nth-of-type(3) {
  background-color: rgba(181, 160, 272, 0.2);
}

/* 10   * - 12:45 - :break:`Salmon Mousse /  Lunch Break` */

body[class*="schedule"] table.table.day2 tr:nth-of-type(10) {
  background-color: rgba(181, 160, 172, 0.2);
}

/* 11   * - 13:45 - `Enabling Blockchain Energy Trading among Smart Buildings through the Use of Multi-Agent Systems and Internet of Things Devices`_ */

body[class*="schedule"] table.table.day2 tr:nth-of-type(11) td:nth-of-type(3) {
  background-color: rgba(181, 160, 272, 0.2);
}

/* 12   * - 14:30 - :break:`Machine that goes "Ping!" / Break` */

body[class*="schedule"] table.table.day2 tr:nth-of-type(12) th {
  background-color: rgba(181, 160, 172, 0.2);
}

body[class*="schedule"] table.table.day2 tr:nth-of-type(12) td:nth-of-type(1) {
  background-color: rgba(181, 160, 172, 0.2);
}

body[class*="schedule"] table.table.day2 tr:nth-of-type(12) td:nth-of-type(2) {
  background-color: rgba(181, 160, 172, 0.2);
}

body[class*="schedule"] table.table.day2 tr:nth-of-type(12) td:nth-of-type(3) {
  background-color: rgba(181, 160, 272, 0.2);
}

/* 13   * - 14:40 - `Python + XPath = Extra Parsing Power`_ :intermediate:`Intermediate` */

body[class*="schedule"] table.table.day2 tr:nth-of-type(13) td:nth-of-type(3) {
  background-color: rgba(181, 160, 272, 0.2);
}

/* 14    * - 15:15 - `Powerful geographic web framework GeoDjango`_ :beginner:`Beginner` */

body[class*="schedule"] table.table.day2 tr:nth-of-type(14) td:nth-of-type(3) {
  background-color: rgba(181, 160, 272, 0.2);
}

/* 15    * - 15:45 - :break:`Ni! / Break` */

body[class*="schedule"] table.table.day2 tr:nth-of-type(15) {
  background-color: rgba(181, 160, 172, 0.2);
}

/* 16    * - 15:55 - Lightning Talks */

/* 17    * - 16:55 - Keynote: Tiwa York */

/* 18    * - 17:40 - Closing */

/* Utility classes */

.flex {
}

.justify-between {
  justify-content: space-between;
}

.w-full {
  width: 100%;
}

.section {
  overflow: hidden;
}

article {
  margin: 2em auto;
  max-width: 90ch;
  min-height: 60vh;
}

.footer-logo {
  width: 200px;
  height: 200px;
}

.navbar {
  background: #ffc400;
}

.navbar-nav > .nav-item > .nav-link {
  font-family: var(--font-primary);
  font-weight: bold;
  color: var(--black);
  font-size: 0.8rem;
}

.navbar-brand {
  font-family: var(--font-primary);
  font-weight: bold;
  color: var(--black);
  font-size: 0.8rem;
}

.navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(34, 41, 47, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.pycon-thailand h1 {
  font-family: var(--font-secondary);
  font-weight: var(--font-extrabold);
  text-transform: uppercase;
  font-size: 46px;
  letter-spacing: 4px;
}

.dropdown-menu {
  border: 1px solid var(--black);
}

.dropdown-item {
  color: var(--black);
}

/* Make content not abut sides on mobile */
.e-content,
header {
  margin-left: 1em;
  margin-right: 1em;
}

.bangkok {
  font-family: var(--font-secondary);
  font-size: 24px;
  letter-spacing: 3px;
}

.when {
  font-family: var(--font-secondary);
  font-size: 20px;
}

.edition {
  font-family: var(--font-secondary);
  font-size: 20px;
  text-align: right;
}

.post-list {
  margin: 1em;
  padding: 0;
}

.post-list-item {
  display: flex;
  justify-content: space-between;
  margin-bottom: 2rem;
}

.post-list-item a {
  text-align: right;
}

